--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "node-mocks-http": "^1.9.0",
     "nodemon": "^2.0.4",
     "puppeteer": "^5.3.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "puppeteer-core": "https://github.com/seanaye/puppeteer/releases/download/v5.5.0-apple-silicon/puppeteer-core-5.5.0-post.tgz"
   }
 }
