--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "puppeteer": "^5.3.0"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "puppeteer-core": "https://github.com/seanaye/puppeteer/releases/download/v5.5.0-apple-silicon/puppeteer-core-5.5.0-post.tgz"
+    "dotenv": "^16.3.1"
   }
 }
